# mycad

./: .ghci  .ghcid  .gitignore  .gitlab-ci.yml  .hspec  CMakeLists.txt  Contributing.md  LICENSE  README.md  Stories.md  TODO.md  TODO.txt  cabal.project  package.yaml  stack.yaml
Entity/: Entity.cabal  README.md  package.yaml
Entity/src/: Entity.hs
Entity/test/: EntitySpec.hs
GUI/: ChangeLog.md  LICENSE
GUI/app/: Main.hs
GUI/src/: FragmentShader.glsl  GL_Helpers.hs  GraphicData.hs  LineVShader.glsl  VertexData.hs  VertexShader.glsl  ViewSpace.hs
Geometry/: Geometry.cabal  README.md  package.yaml
Geometry/src/: Geometry.hs
Geometry/test/: GeometrySpec.hs
HaskellCAD/: .ghci  .ghcid  ChangeLog.md  README.md  package.yaml
HaskellCAD/app/: Main.hs  Main2.hs
HaskellCAD/src/: CMakeLists.txt  CommandParser.hs  CommandParser2.hs  CommandParser3.hs  CommandRunner.hs  CommandRunners.hs  Commands.hpp  Commands.hs  Entity.hs  Errors.hs  Geometry.hs  Topology.hs  main.cpp
HaskellCAD/test/: CMakeLists.txt  EntitySpec.hs  GeometrySpec.hs  ShapesTests.cpp
MyCAD/: MyCAD.cabal  README.md  package.yaml
MyCAD/GUI/: GLFW_Helpers.hs  GL_Helpers.hs  GL_Primitives.hs  GL_RenderData.hs  GL_Renderer.hs  GraphicData.hs  Main.hs  Pictures.hs  RenderQueue.hs  VertexData.hs  ViewSpace.hs  package.yaml
MyCAD/MyCAD/: Main.hs
MyCAD/TUI/: LaunchTUI.hs  Main.hs  package.yaml
MyCAD/app/: GuiMain.hs  MyCAD.hs  MyCAD_Gui.hs  MyCAD_Tui.hs  MyCAD_dev.hs  MyCAD_parser.hs  TuiMain.hs
MyCAD/app/GUI/: GLFW_Helpers.hs  GL_Helpers.hs  GL_Primitives.hs  GL_RenderData.hs  GL_Renderer.hs  GraphicData.hs  LaunchGUI.hs  Pictures.hs  RenderQueue.hs  ViewSpace.hs
MyCAD/app/GUI/GL/: Helpers.hs  Pictures.hs  Primitives.hs  RenderData.hs  Renderer.hs
MyCAD/app/TUI/: CommandParser.hs  CommandParser2.hs  CommandRunner.hs  Errors.hs  LaunchTUI.hs  TUI.hs
TUI/: package.yaml
TUI/app/: Main.hs
Test/: README.md  Test.cabal
Test/src/: MyCADTest.hs
Test/test/: TestSpec.hs
Topology/: README.md  Topology.cabal  package.yaml
Topology/src/: Topology.hs
Topology/src/Topology/: PrettyPrint.hs
Topology/test/: TopologySpec.hs
app/: Main.hs
cmake/: 01_SetupCmakeVariables.cmake  02_SetupCppMacros.cmake  05_SetupQt.cmake  CMakeLists.txt
doc/: Doxyfile
include/MyCAD/: Client.hpp  Communication.hpp  Exceptions.hpp  Geometry.hpp  Request.hpp  Server.hpp  Shapes.hpp
misc/cmake/: FindOpenCasCade.cmake
src/: CMakeLists.txt  Commands.cpp  Commands.hpp  Communication.cpp  Entity.hs  Exceptions.cpp  FragmentShader.glsl  GLFW_Helpers.hs  GL_Helpers.hs  Geometry.cpp  Geometry.hs  GraphicData.hs  Server.cpp  ServerCommands.cpp  ServerCommands.hpp  Shapes.cpp  Topology.hs  VertexData.hs  VertexShader.glsl  ViewSpace.hs  WorkSpace.hs  main.cpp
test/: CMakeLists.txt  EntitySpec.hs  GeometrySpec.hs  GeometryTests.cpp  ServerTests.cpp  ShapeTests.cpp  ShapesTests.cpp  TopologySpec.hs  WorkSpaceSpec.hs  main.cpp
test/gui/: ApplicationTests.cpp  CMakeLists.txt
util/: README.md  ghci  ghcid
