cabal-version: 1.12

name:           Entity
version:        0.1.0.0
description:    Please see the README on Gitlab at
                <https://gitlab.com/ezzieyguywuf/mycad/-/blob/master/README.md>
homepage:       https://gitlab.com/ezzieyguywuf/mycad/
bug-reports:    https://gitlab.com/ezzieyguywuf/mycad/-/issues
author:         Wolfgang E. Sanyer
maintainer:     WolfgangESanyer@Gmail.com
copyright:      2020 Wolfgang E. Sanyer
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type: git
    location: https://gitlab.com/ezzieyguywuf/mycad

library
    exposed-modules:
        Entity
    other-modules:
        Paths_Entity
    hs-source-dirs:
        src
    build-depends:
        Geometry
      , Topology
      , base >=4.7 && <5
      , containers
      , linear
      , mtl
      , prettyprinter
      , transformers
    default-language: Haskell2010

test-suite Entity-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        EntitySpec
        Paths_Entity
    hs-source-dirs:
        test
    build-depends:
        Entity
      , Geometry
      , QuickCheck
      , Topology
      , base >=4.7 && <5
      , containers
      , hspec
      , linear
      , mtl
      , prettyprinter
      , transformers
    default-language: Haskell2010
