cabal-version: 1.12

name:           MyCAD
version:        0.1.0.0
description:    Please see the README on Gitlab at
                <https://gitlab.com/ezzieyguywuf/mycad/-/blob/master/README.md>
homepage:       https://gitlab.com/ezzieyguywuf/mycad/
bug-reports:    https://gitlab.com/ezzieyguywuf/mycad/-/issues
author:         Wolfgang E. Sanyer
maintainer:     WolfgangESanyer@Gmail.com
copyright:      2020 Wolfgang E. Sanyer
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type: git
    location: https://gitlab.com/ezzieyguywuf/mycad

executable mycad
    main-is: MyCAD.hs
    other-modules:
        GUI.GL.Helpers
        GUI.GL.Primitives
        GUI.GL.RenderData
        GUI.GL.Renderer
        GUI.GL.Pictures
        GUI.LaunchGUI
        GUI.GLFW_Helpers
        GUI.GraphicData
        GUI.RenderQueue
        GUI.ViewSpace
        TUI.CommandParser
        TUI.CommandRunner
        TUI.Errors
        TUI.LaunchTUI
        Paths_MyCAD
    hs-source-dirs:
        app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        Entity
      , GLFW-b
      , Geometry
      , JuicyPixels
      , Topology
      , ansi-terminal
      , base >=4.7 && <5
      , containers
      , filepath
      , gl
      , haskeline
      , linear
      , megaparsec
      , mtl
      , stm
      , text
      , transformers
      , vector
    default-language: Haskell2010

executable mycad-dev
    main-is: MyCAD_dev.hs
    other-modules:
        TUI.CommandParser
        TUI.CommandRunner
    hs-source-dirs:
        app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        Entity
      , Geometry
      , Topology
      , base >=4.7 && <5
      , containers
      , haskeline
      , linear
      , megaparsec
      , mtl
      , stm
      , text
      , transformers
    default-language: Haskell2010

executable mycad-gui
    main-is: MyCAD_Gui.hs
    other-modules:
        GUI.GL.Helpers
        GUI.GL.Primitives
        GUI.GL.RenderData
        GUI.GL.Renderer
        GUI.GL.Pictures
        GUI.LaunchGUI
        GUI.GLFW_Helpers
        GUI.GraphicData
        GUI.RenderQueue
        GUI.ViewSpace
        Paths_MyCAD
    hs-source-dirs:
        app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        Entity
      , GLFW-b
      , Geometry
      , JuicyPixels
      , Topology
      , ansi-terminal
      , base >=4.7 && <5
      , containers
      , filepath
      , gl
      , haskeline
      , linear
      , megaparsec
      , mtl
      , stm
      , text
      , transformers
      , vector
    default-language: Haskell2010

executable mycad-tui
    main-is: MyCAD_Tui.hs
    other-modules:
        TUI.CommandParser
        TUI.CommandRunner
        TUI.Errors
        TUI.LaunchTUI
        Paths_MyCAD
    hs-source-dirs:
        app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        Entity
      , Geometry
      , Topology
      , base >=4.7 && <5
      , containers
      , haskeline
      , linear
      , megaparsec
      , mtl
      , stm
      , text
      , transformers
    default-language: Haskell2010
