cabal-version: 1.12

name:           Test
version:        0.1.0.0
description:    Please see the README on Gitlab at
                <https://gitlab.com/ezzieyguywuf/mycad/-/blob/master/README.md>
homepage:       https://gitlab.com/ezzieyguywuf/mycad/
bug-reports:    https://gitlab.com/ezzieyguywuf/mycad/-/issues
author:         Wolfgang E. Sanyer
maintainer:     WolfgangESanyer@Gmail.com
copyright:      2020 Wolfgang E. Sanyer
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type: git
    location: https://gitlab.com/ezzieyguywuf/mycad

library
    exposed-modules:
        MyCADTest
    other-modules:
        TUI.CommandParser
        TUI.CommandRunner
    hs-source-dirs:
        src
        ../MyCAD/app
    build-depends:
        Entity
      , Geometry
      , Topology
      , base >=4.7 && <5
      , containers
      , haskeline
      , linear
      , megaparsec
      , mtl
      , stm
      , text
      , transformers
      , nonempty-containers
    default-language: Haskell2010

test-suite MyCAD-test
    type: exitcode-stdio-1.0
    main-is: TestSpec.hs
    other-modules:
        GeometrySpec
        TopologySpec
        EntitySpec
        Entity
        Geometry
        Topology
        Topology.PrettyPrint
        Paths_Test
    hs-source-dirs:
        test
        ../Geometry/src
        ../Geometry/test
        ../Topology/src
        ../Topology/test
        ../Entity/src
        ../Entity/test
    build-depends:
        base >=4.7 && <5
      , Geometry
      , Topology
      , Entity
      , Test
      , QuickCheck
      , containers
      , hspec
      , linear
      , mtl
      , prettyprinter
      , transformers
      , fgl
      , nonempty-containers
    default-language: Haskell2010
