cabal-version: 1.12

name:           Topology
version:        0.1.0.0
description:    Please see the README on Gitlab at
                <https://gitlab.com/ezzieyguywuf/mycad/-/blob/master/README.md>
homepage:       https://gitlab.com/ezzieyguywuf/mycad/
bug-reports:    https://gitlab.com/ezzieyguywuf/mycad/-/issues
author:         Wolfgang E. Sanyer
maintainer:     WolfgangESanyer@Gmail.com
copyright:      2020 Wolfgang E. Sanyer
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type: git
    location: https://gitlab.com/ezzieyguywuf/mycad

library
    exposed-modules:
        Topology
        Topology.PrettyPrint
    other-modules:
        Paths_Topology
    hs-source-dirs:
        src
    build-depends:
        base >=4.7 && <5
      , fgl
      , linear
      , mtl
      , prettyprinter
      , text
      , nonempty-containers
      , containers
      , transformers
    default-language: Haskell2010

test-suite Topology-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        TopologySpec
        Paths_Topology
    hs-source-dirs:
        test
    build-depends:
        QuickCheck
      , Topology
      , base >=4.7 && <5
      , fgl
      , containers
      , nonempty-containers
      , hspec
      , linear
      , mtl
      , prettyprinter
      , text
      , transformers
    default-language: Haskell2010
